--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portafolio</title>
+    <title>Daniel Betancourt</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="icon" type="image/x-icon" href="img/favico.ico">
     
 </head>
 <body>
-    <h1>Texto actualizado</h1>
+    <h1>Daniel Betancourt</h1>
+    <p>Ingeniero en informatica| Desarrollador web</p>
 </body>
 </html>
