--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         <h1 class="display-5 fw-bold lh-1 mb-3">Contacto</h1>
         <p>Si deseas ponerte en contacto conmigo, aquí tienes mis datos. Estaré encantado de responder lo más pronto posible.</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-          <a href="https://api.whatsapp.com/send?l=es&phone=56947859453&text=Hola" class="btn-lg px-4 me-md-2">
+          <a href="https://api.whatsapp.com/send?l=es&phone=56997772394&text=Hola" class="btn-lg px-4 me-md-2">
             <img src="svg/whatsapp.svg" height="45"></img>
           </a>
           <a href="https://www.linkedin.com/in/danielbetancourtr/" class="btn-lg px-4 me-md-2">
@@ -300,7 +300,7 @@
 <!--Footer-->
 <section class="bg-mf">
   <footer>
-    <p class="text-white">todos los derechos recervados </p>
+    <p class="text-white">todos los derechos reservados </p>
   </footer>
 </section>
 <script src="js/bootstrap.js"></script>
